# llm-training-experiments

./: .gitignore  README.md  bidirectional_experience_replay.md  pyproject.toml
attention_sparks_thinking/: implementation_spec.md
benchmarks/: MEMORY_ESTIMATION_METHOD.md  README.md  benchmark_runner.py  estimate_memory.py  estimate_memory_v2.py  estimate_nodes_v2.py  grpo_benchmark.py  prepare_benchmark_data.py  qwen2_5_tp_plan.py  sft_benchmark.py  sft_torchtune_worker.py  sft_trl_worker.py  simple_reward.py
configs/: accelerate_fsdp.yaml  self_teach_interaction.yaml
docs/: ber_implementation.md  bidirectional_experience_replay.md
one_shot_metrics/: README.md  compute_metrics.py  compute_rollouts.py  compute_token_entropy.py  li_examples_benchmark.csv  rlvr_benchmark_examples.md  rlvr_example_selection_metrics.md  submit_rollouts.slurm  submit_token_entropy.slurm  wang_examples_benchmark.csv
reasoning_head_analysis/: ablate_heads.py  ablate_heads_v2.py  diagnose_system_prompt.py  identify_heads.py  plot_head_evolution.py
scripts/: check_gpus.sh  check_s1_deps.py  cluster_config.sh  download_model.slurm  eval_bigmath.py  eval_s1k.py  extract_checkpoints.py  extract_checkpoints.sh  extract_teacher_samples.py  filter_bigmath_by_eval.py  filter_s1k_verifiable.py  generate_correct_cache.py  patch_model_config.py  prepare_bigmath_self_teach.py  prepare_dapo_self_teach.py  prepare_example_data.py  prepare_multi_prompt_val.py  prepare_nocode_data.py  prepare_nocode_val.py  prepare_pi13_data.py  prepare_pi13_repeat_data.py  prepare_pi1_data.py  prepare_s1k_sft.py  (+40 more)
(+402 files in other folders)
